# super-todo-api

./: .env.example  .gitignore  README.md  conftest.py  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 0d9acc6acc88_add_users_table_updated_at_column.py  0f594ba3ed40_create_companies_table.py  4eff819f235c_add_users_table_company_id_column.py  8d6fb18a63fc_add_users_table_updated_at_column.py  dee7b456bf90_create_users_table.py  fa1a8e1f1798_set_company_name_column_as_unique.py
src/: main.py
src/application/dtos/: base_dto.py
src/application/dtos/auth/: auth_login_dto.py  auth_signin_dto.py  auth_signup_dto.py  token_dto.py
src/application/dtos/security/: token_generator_decode_dto.py  token_generator_encode_dto.py
src/application/dtos/user/: user_create_dto.py  user_get_dto.py  user_list_dto.py  user_output_dto.py  user_update_dto.py  user_update_partial_dto.py
src/application/usecases/auth/: auth_login_usecase.py  auth_signin_usecase.py  auth_signup_usecase.py  auth_singup_usecase.py
src/application/usecases/user/: user_create_usecase.py  user_delete_usecase.py  user_get_usecase.py  user_list_usecase.py  user_update_partial_usecase.py  user_update_usecase.py
src/core/: container.py  settings.py
src/domain/entities/: base_entity.py  company_entity.py  company_type.py  user_entity.py  user_role.py
src/domain/exceptions/: auth_exceptions.py  company_exceptions.py  exceptions.py  user_exceptions.py
src/domain/repositories/: company_repository.py  user_repository.py
src/domain/security/: password_hasher.py  token_generator.py
src/infrastructure/db/: session.py
src/infrastructure/db/models/: company_model.py  user_model.py
src/infrastructure/repositories/: company_repository_sqlalchemy.py  user_repository_sqlalchemy.py
src/infrastructure/security/: password_hasher.py  password_hasher_bcrypt.py  token_generator_pyjwt.py
src/presentation/api/: router.py
src/presentation/api/v1/: auth_controller.py  user_controller.py
src/presentation/api/v1/routes/: auth_controller.py  user_controller.py
src/presentation/api/v1/security/: exceptions_handler.py  token_handler.py
src/presentation/security/: simple_oauth2_password_request_form.py
tests/: test_app.py
tests/application/usecases/auth/: test_auth_signin_usecase.py  test_auth_signup_usecase.py
tests/application/usecases/user/: test_user_create_usecase.py  test_user_delete_usecase.py  test_user_get_usecase.py  test_user_list_usecase.py  test_user_update_partial_usecase.py  test_user_update_usecase.py
tests/domain/entities/: test_user_entity.py
tests/domain/repositories/: test_user_repository.py
tests/domain/security/: test_password_hasher.py
tests/infrastrucure/securit/: test_token_generator_pyjwt.py
tests/infrastrucure/security/: test_password_hasher.py  test_token_generator_pyjwt.py
tests/presentation/api/v1/: test_auth_controller.py  test_user_controller.py
tests/presentation/api/v1/routes/: test_auth_controller.py  test_user_controller.py
